feat: adiciona correção dos exercícios da sexta aula