@@ -1,6 +1,5 @@
 package aula_06.parte_final.ex_2.parte_2_2;
 
-import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -11,18 +10,18 @@ public class Main {
 
     // Lê o arquivo e converte cada linha em um objeto Produto
     List<Produto> carregar(Path arquivo) {
-        List<Produto> estoque = new ArrayList<>();
+        var estoque = new ArrayList<Produto>();
         if (!Files.exists(arquivo)) return estoque;
 
         try {
-            for (String linha : Files.readAllLines(arquivo)) {
+            for (var linha : Files.readAllLines(arquivo)) {
                 if (linha.isBlank()) continue;
-                String[] partes = linha.split(";");
+                var partes = linha.split(";");
                 // Ignora linhas com formato inválido (precisam ter exatamente 4 partes)
                 if (partes.length != 4) continue;
                 try {
-                    int quantidade = Integer.parseInt(partes[2]);
-                    double preco = Double.parseDouble(partes[3]);
+                    var quantidade = Integer.parseInt(partes[2]);
+                    var preco = Double.parseDouble(partes[3]);
                     estoque.add(new Produto(partes[0], partes[1], quantidade, preco));
                 } catch (NumberFormatException e) {
                     // Ignora linhas com quantidade ou preço em formato inválido
@@ -35,22 +34,25 @@ public class Main {
         return estoque;
     }
 
-    // Grava a lista inteira no arquivo, sobrescrevendo o conteúdo anterior
+    // Grava a lista inteira no arquivo, sobrescrevendo o conteúdo anterior.
+    // Files.write recebe a lista de linhas e cuida de fechar o arquivo sozinho.
     void salvar(Path arquivo, List<Produto> estoque) {
-        try (FileWriter writer = new FileWriter(arquivo.toFile())) {
-            for (Produto p : estoque) {
-                writer.write(p.paraLinha() + "\n");
-            }
+        var linhas = new ArrayList<String>();
+        for (var p : estoque) {
+            linhas.add(p.paraLinha());
+        }
+        try {
+            Files.write(arquivo, linhas);
         } catch (IOException e) {
             IO.println("Erro ao salvar estoque: " + e.getMessage());
         }
     }
 
     void main() {
-        Path arquivo = Path.of("estoque.txt");
+        var arquivo = Path.of("estoque.txt");
 
         // 1. Carrega o estoque do arquivo
-        List<Produto> estoque = carregar(arquivo);
+        var estoque = carregar(arquivo);
 
         // 2. Se a lista estiver vazia (primeira execução), cadastra produtos de exemplo
         if (estoque.isEmpty()) {
@@ -61,15 +63,16 @@ public class Main {
             IO.println("Estoque vazio. 4 produtos de exemplo cadastrados.\n");
         }
 
-        // 3. Lista todos os produtos em formato tabular com String.format
+        // 3. Lista todos os produtos em formato tabular.
+        // String::formatted é a forma moderna e encadeável de String.format.
         IO.println("=== Estoque ===");
-        IO.println(String.format("%-6s %-15s %5s %10s %15s",
+        IO.println("%-6s %-15s %5s %10s %15s".formatted(
                 "Cod.", "Nome", "Qtd.", "Preço", "Val. Estoque"));
         IO.println("-".repeat(55));
 
-        double totalEstoque = 0;
-        for (Produto p : estoque) {
-            IO.println(String.format("%-6s %-15s %5d %10.2f %15.2f",
+        var totalEstoque = 0.0;
+        for (var p : estoque) {
+            IO.println("%-6s %-15s %5d %10.2f %15.2f".formatted(
                     p.getCodigo(), p.getNome(), p.getQuantidade(),
                     p.getPreco(), p.getValorEmEstoque()));
             totalEstoque += p.getValorEmEstoque();
@@ -77,12 +80,12 @@ public class Main {
 
         // 4. Exibe o valor total somando o valor em estoque de cada produto
         IO.println("-".repeat(55));
-        IO.println(String.format("Valor total do estoque: R$ %.2f", totalEstoque));
+        IO.println("Valor total do estoque: R$ %.2f".formatted(totalEstoque));
 
         // 5. Alerta para produtos com quantidade abaixo de 5
         IO.println("\n=== Estoque baixo (qtd < 5) ===");
-        boolean temBaixo = false;
-        for (Produto p : estoque) {
+        var temBaixo = false;
+        for (var p : estoque) {
             if (p.getQuantidade() < 5) {
                 IO.println("ALERTA: " + p.getNome() + " — apenas " + p.getQuantidade() + " unidade(s).");
                 temBaixo = true;
@@ -91,7 +94,7 @@ public class Main {
         if (!temBaixo) IO.println("Nenhum produto com estoque baixo.");
 
         // Desafio extra: aplica reajuste de 10% em todos os produtos e salva
-        for (Produto p : estoque) {
+        for (var p : estoque) {
             p.aumentarPreco(10);
         }
         IO.println("\nPreços reajustados em 10%.");
